# Modern_cpp

./: .cproject  .gitignore  .project  9.1.cpp  CMakeLists.txt  macosx_xcode_clang_project_settings.xml  main_code_template.xml  msvc_project_settings.xml
Debug/: makefile  sources.mk
Debug/src/LC/: subdir.mk
Debug/src/common/: subdir.mk
Debug/src/cpp/: subdir.mk
Modern_cpp/: .cproject  .project
src/LC/: .gitignore  10.1.cpp  10.2.cpp  10.6.cpp  10.7.cpp  11.1.cpp  11.2.cpp  12.1.cpp  12.2.cpp  12.3.cpp  5.4.1.cpp  5.4.2.cpp  5.4.3.cpp  5.4.4.cpp  5.4.5.cpp  5.4.7.cpp  8.4.cpp  8.5.1.cpp  8.6.1.cpp  9.1.cpp  9.2.cpp  9.3.cpp  algo  bttest.cpp  test.cpp
src/common/: bt.cpp  bt.h  btnew.h  misc.cpp  misc.h  node.h  print.cpp  print.h
src/cpp/: BaseDerived.cpp  DeleteFromMap.cpp  RVO.cpp
